--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
 <body class="position">
   <article>
     <header class="blue">
+      <!-- facebook tags -->
+  <meta property="og:title" content="Cats">
+  <meta property="og:description" content="Quality images of cats.">
+  <meta property="og:image" content="http://img-aws.ehowcdn.com/350x235p/photos.demandstudios.com/getty/article/192/72/78400000_XS.jpg">
+  <meta property="og:url" content="https://rubythornne.github.io/cats/">
+  <meta property="og:type" content="image">
+
+  <!-- twitter tags -->
+  <meta name="twitter:title" content="cats">
+  <meta name="twitter:description" content="Quality images of cats.">
+  <meta name="twitter:image" content="http://img-aws.ehowcdn.com/350x235p/photos.demandstudios.com/getty/article/192/72/78400000_XS.jpg">
+  <meta name="twitter:card" content="small_image">
+
       <h1>Headline</h1>
         <p>Tagline</p>
       <img src="images/cat.jpg" alt="cat"/>
