--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
       <!-- facebook tags -->
   <meta property="og:title" content="Cats">
   <meta property="og:description" content="Quality images of cats.">
-  <meta property="og:image" content="http://img-aws.ehowcdn.com/350x235p/photos.demandstudios.com/getty/article/192/72/78400000_XS.jpg">
+  <meta property="og:image" content="http://img-aws.ehowcdn.com/350x235p/photos.demandstudios.com/getty/article/192/72/78400000_XS.jpg">"
+  <meta property="og:image:width" content="350">
+  <meta property="og:image:hiegth" content="235">
   <meta property="og:url" content="https://rubythornne.github.io/cats/">
-  <meta property="og:type" content="image">
+  <meta property="og:type" content="website">
 
   <!-- twitter tags -->
   <meta name="twitter:title" content="cats">
@@ -37,4 +39,4 @@
   <footer class="orange">
   </footer>
 </body>
-</html>
+</html
