--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta property="og:description" content="Quality images of cats.">
   <meta property="og:image" content="http://img-aws.ehowcdn.com/350x235p/photos.demandstudios.com/getty/article/192/72/78400000_XS.jpg">"
   <meta property="og:image:width" content="350">
-  <meta property="og:image:hiegth" content="235">
+  <meta property="og:image:height" content="235">
   <meta property="og:url" content="https://rubythornne.github.io/cats/">
   <meta property="og:type" content="website">
 
