--- a/index.html
+++ b/index.html
@@ -1,31 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="styles/basic-styles.css">
-  <link rel="stylesheet" href="styles/custom-position-styles.css">
-  </head>
-<body class="position">
-  <article>
-    <header class="blue">
-      <!-- facebook tags -->
-  <meta property="og:title" content="Cats">
-  <meta property="og:description" content="Quality images of cats.">
-  <meta property="og:image" content="http://img-aws.ehowcdn.com/350x235p/photos.demandstudios.com/getty/article/192/72/78400000_XS.jpg">"
-  <meta property="og:image:width" content="350">
-  <meta property="og:image:height" content="235">
-  <meta property="og:url" content="https://rubythornne.github.io/cats/">
-  <meta property="og:type" content="website">
-
-  <!-- twitter tags -->
-  <meta name="twitter:title" content="cats">
-  <meta name="twitter:description" content="Quality images of cats.">
-  <meta name="twitter:image" content="http://img-aws.ehowcdn.com/350x235p/photos.demandstudios.com/getty/article/192/72/78400000_XS.jpg">
-  <meta name="twitter:card" content="small_image">
-
-      <h1>Headline</h1>
-        <p>Tagline</p>
-      <img src="images/cat.jpg" alt="cat"/>
-    </header>
+    <title>Cats</title>
+      <link rel="stylesheet" href="styles/basic-styles.css">
+      <link rel="stylesheet" href="styles/custom-position-styles.css">
+      <meta property="og:title" content="Cats">
+      <meta property="og:description" content="Quality images of cats.">
+      <meta property="og:image" content="http://img-aws.ehowcdn.com/350x235p/photos.demandstudios.com/getty/article/192/72/78400000_XS.jpg">
+      <meta property="og:image:width" content="350">
+      <meta property="og:image:height" content="235">
+      <meta property="og:url" content="https://rubythornne.github.io/cats/">
+      <meta property="og:type" content="website">
+      <meta name="twitter:title" content="cats">
+      <meta name="twitter:description" content="Quality images of cats.">
+      <meta name="twitter:image" content="http://img-aws.ehowcdn.com/350x235p/photos.demandstudios.com/getty/article/192/72/78400000_XS.jpg">
+      <meta name="twitter:card" content="small_image">
+ </head>
+    
+    <body>
+       <article>
+          <header class="blue">
+             <h1>Headline</h1>
+             <p>Tagline</p>
+             <img src="images/cat.jpg" alt="cat">
+         </header>
 
     <section class="pink">
      <p>Etiam posuere ornare euismod. Integer sem ante, semper eu eleifend vitae, sodales vitae elit. Phasellus nec nulla ut augue pretium volutpat. Vestibulum et tempor nisi. Etiam nec erat nec lectus interdum laoreet. Nullam euismod a nibh ullamcorper dignissim. Suspendisse bibendum nisi ac elit ullamcorper, eu pharetra eros efficitur. Pellentesque venenatis nunc sed nunc varius, ut blandit arcu semper. Fusce feugiat, ex tristique luctus bibendum, libero lectus interdum urna, in sodales diam risus et velit. Integer sed risus maximus, accumsan lacus non, fringilla felis. Mauris nec tempus nisl. Nam non pharetra dolor. Vestibulum ac turpis feugiat eros efficitur sodales. In dapibus eleifend tellus, sit amet porta risus ultricies ac.</p>
@@ -39,4 +37,4 @@
   <footer class="orange">
   </footer>
 </body>
-</html
+</html>
