--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <title>Cats</title>
       <link rel="stylesheet" href="styles/basic-styles.css">
-      <link rel="stylesheet" href="styles/custom-position-styles.css">
-      <meta property="og:title" content="Cats">      <meta property="fb:app_id" content="APPID"/>
+      <link rel="stylesheet" href="styles/custom-position-styles.css">   
+      <meta property="fb:app_id" content="APPID"/>
+      <meta property="og:title" content="Cats">
       <meta property="og:description" content="Quality images of cats.">
       <meta property="og:image" content="http://img-aws.ehowcdn.com/350x235p/photos.demandstudios.com/getty/article/192/72/78400000_XS.jpg">
       <meta property="og:image:width" content="350">
