--- a/index.html
+++ b/index.html
@@ -2,9 +2,36 @@
 <html lang="en">
 <head>
     <title>Cats</title>
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117760164-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-117760164-1');
+    </script>
+
       <link rel="stylesheet" href="styles/basic-styles.css">
       <link rel="stylesheet" href="styles/custom-position-styles.css">   
       <meta property="fb:app_id" content="APPID"/>
+      <script>window.twttr = (function(d, s, id) {
+         var js, fjs = d.getElementsByTagName(s)[0],
+         t = window.twttr || {};
+      if (d.getElementById(id)) return t;
+      js = d.createElement(s);
+        js.id = id;
+        js.src = "https://platform.twitter.com/widgets.js";
+        fjs.parentNode.insertBefore(js, fjs);
+
+        t._e = [];
+        t.ready = function(f) {
+        t._e.push(f);
+        };
+
+      return t;
+        }(document, "script", "twitter-wjs"));
+      </script>
       <meta property="og:title" content="Cats">
       <meta property="og:description" content="Quality images of cats.">
       <meta property="og:image" content="http://img-aws.ehowcdn.com/350x235p/photos.demandstudios.com/getty/article/192/72/78400000_XS.jpg">
@@ -36,6 +63,10 @@
     </section>
   </article>
   <footer class="orange">
+      <a class="twitter-share-button"
+      href="https://twitter.com/intent/tweet?text=meow">
+      Tweet</a>
+      <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Frubythornne.github.io%2Fcats%2Findex.html&layout=button&size=small&mobile_iframe=true&width=59&height=20&appId" width="59" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
   </footer>
 </body>
 </html>
